--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,4 +1,4 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.9/static/pretendard.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.9/static/pretendard.css");
 /* 프리텐다드 폰트 */
 * {
   padding: 0;
